fix problem where ordered m1 wrap-around was getting stuck with second time equation always being 2x0=0.

--- a/RMM_styles.css
+++ b/RMM_styles.css
@@ -23,7 +23,7 @@ div.statslive {
   float:right;
   margin-top:-10px;
   margin-right:10px;
-  font-size:0.75em;
+  font-size:0.7em;
   color:#ccc;
 }
 
